--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Misliking</title>
+  <meta name="description" content="Misliking's Website">
+  <meta name="author" content="Misliking & Local">
+
+
+</head>
+
+<body>
+  <h1>Yay, the website works</h1>
+</body>
+</html>
